SQLITE3 prefix to options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,31 +13,31 @@ include(GNUInstallDirs)
 
 # build options and optional modules (https://www.sqlite.org/compile.html):
 
-option(ENABLE_SHARED             "Build shared library"                           ON)
-option(ENABLE_STATIC             "Build static library"                           OFF)
-option(BUILD_SHELL               "Build SQLite3 shell application"                ON)
-option(ENABLE_STATIC_SHELL       "Statically link shell tool"                     ON)
-option(ENABLE_DEBUG              "Build with debugging features enabled"          OFF)
-option(ENABLE_EDITLINE           "Use BSD libedit"                                ON)
-option(ENABLE_READLINE           "Use GNU readline"                               ON)
-option(ENABLE_ICU                "Enable international components for unicode"    OFF)
-option(ENABLE_THREADSAFE         "Build a thread-safe library"                    ON)
-option(ENABLE_DYNAMIC_EXTENSIONS "Support loadable extensions"                    ON)
-option(ENABLE_MATH               "SQL math functions"                             ON)
-option(ENABLE_FTS4               "Include fts4 support"                           ON)
-option(ENABLE_FTS3               "Include fts3 support"                           OFF)
-option(ENABLE_FTS5               "Include fts5 support"                           ON)
-option(ENABLE_RTREE              "Include rtree support"                          ON)
-option(ENABLE_SESSION            "Enable the session extension"                   OFF)
-option(ENABLE_COLUMN_METADATA    "Enable column metadata"                         OFF)
-option(ENABLE_DBSTAT_VTAB        "Enable dbstat virtual table"                    OFF)
-option(ENABLE_RBU                "Enable resumable bulk update extension"         OFF)
-option(ENABLE_STAT4              "Enhance query planner under certain situations" OFF)
-option(OMIT_DECLTYPE             "Omit declared type of columns"                  ON)
-option(OMIT_JSON                 "Omit JSON SQL functions"                        OFF)
-option(OMIT_AUTOINIT             "Omit automatic initialization"                  OFF)
-option(RECOMMENDED_OPTIONS       "Compile by SQLite3 recommended options"         ON)
-option(USE_URI                   "Enable the default URI filename processing"     OFF)
+option(SQLITE3_ENABLE_SHARED             "Build shared library"                           ON)
+option(SQLITE3_ENABLE_STATIC             "Build static library"                           OFF)
+option(SQLITE3_BUILD_SHELL               "Build SQLite3 shell application"                ON)
+option(SQLITE3_ENABLE_STATIC_SHELL       "Statically link shell tool"                     ON)
+option(SQLITE3_ENABLE_DEBUG              "Build with debugging features enabled"          OFF)
+option(SQLITE3_ENABLE_EDITLINE           "Use BSD libedit"                                ON)
+option(SQLITE3_ENABLE_READLINE           "Use GNU readline"                               ON)
+option(SQLITE3_ENABLE_ICU                "Enable international components for unicode"    OFF)
+option(SQLITE3_ENABLE_THREADSAFE         "Build a thread-safe library"                    ON)
+option(SQLITE3_ENABLE_DYNAMIC_EXTENSIONS "Support loadable extensions"                    ON)
+option(SQLITE3_ENABLE_MATH               "SQL math functions"                             ON)
+option(SQLITE3_ENABLE_FTS4               "Include fts4 support"                           ON)
+option(SQLITE3_ENABLE_FTS3               "Include fts3 support"                           OFF)
+option(SQLITE3_ENABLE_FTS5               "Include fts5 support"                           ON)
+option(SQLITE3_ENABLE_RTREE              "Include rtree support"                          ON)
+option(SQLITE3_ENABLE_SESSION            "Enable the session extension"                   OFF)
+option(SQLITE3_ENABLE_COLUMN_METADATA    "Enable column metadata"                         OFF)
+option(SQLITE3_ENABLE_DBSTAT_VTAB        "Enable dbstat virtual table"                    OFF)
+option(SQLITE3_ENABLE_RBU                "Enable resumable bulk update extension"         OFF)
+option(SQLITE3_ENABLE_STAT4              "Enhance query planner under certain situations" OFF)
+option(SQLITE3_OMIT_DECLTYPE             "Omit declared type of columns"                  ON)
+option(SQLITE3_OMIT_JSON                 "Omit JSON SQL functions"                        OFF)
+option(SQLITE3_OMIT_AUTOINIT             "Omit automatic initialization"                  OFF)
+option(SQLITE3_RECOMMENDED_OPTIONS       "Compile by SQLite3 recommended options"         ON)
+option(SQLITE3_USE_URI                   "Enable the default URI filename processing"     OFF)
 if(WIN32)
     option(WIN32_MALLOC              "Use Windows Heap API functions for memory allocation" OFF)
     option(WIN32_HEAP_CREATE         "Force the Win32 native memory allocator"              OFF)
@@ -50,8 +50,8 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Release or Debug?" FORCE)
 endif()
 
-if(SQLITE_ENABLE_COLUMN_METADATA AND SQLITE_OMIT_DECLTYPE) # https://github.com/sqlite/sqlite/blob/master/src/vdbeapi.c#L1355
-    message(FATAL_ERROR "please unset the SQLITE_OMIT_DECLTYPE if you want to\
+if(SQLITE3_ENABLE_COLUMN_METADATA AND SQLITE3_OMIT_DECLTYPE) # https://github.com/sqlite/sqlite/blob/master/src/vdbeapi.c#L1355
+    message(FATAL_ERROR "please unset the SQLITE3_OMIT_DECLTYPE if you want to\
     compile with SQLITE_ENABLE_COLUMN_METADATA,\
     compiling with both options ON, is not recommended.")
 endif()
@@ -176,7 +176,7 @@ if(NOT _HAVE_SYSTEM)
 endif()
 
 # Check pthead library
-if(ENABLE_THREADSAFE)
+if(SQLITE3_ENABLE_THREADSAFE)
     if(WIN32)
         add_definitions(-D_REENTRANT=1 -DSQLITE_THREADSAFE=1)
     else()
@@ -194,7 +194,7 @@ if(ENABLE_THREADSAFE)
                 set(PTHREAD_LIBRARIES pthread)
             else()
                 add_definitions(-DSQLITE_THREADSAFE=0)
-                set(ENABLE_THREADSAFE OFF CACHE BOOL "Build a thread-safe library" FORCE)
+                set(SQLITE3_ENABLE_THREADSAFE OFF CACHE BOOL "Build a thread-safe library" FORCE)
                 message(WARNING "Missing pthread functions, thread-safe disabled!")
             endif()
         endif()
@@ -203,7 +203,7 @@ else()
     add_definitions(-DSQLITE_THREADSAFE=0)
 endif()
 
-if(ENABLE_DYNAMIC_EXTENSIONS)
+if(SQLITE3_ENABLE_DYNAMIC_EXTENSIONS)
     if(NOT WIN32)
         check_include_file(dlfcn.h HAVE_DLFCN_H)
         if(HAVE_DLFCN_H)
@@ -219,7 +219,7 @@ if(ENABLE_DYNAMIC_EXTENSIONS)
                 endif()
             else()
                 add_definitions(-DSQLITE_OMIT_LOAD_EXTENSION=1)
-                set(ENABLE_DYNAMIC_EXTENSIONS OFF CACHE BOOL "Support loadable extensions" FORCE)
+                set(SQLITE3_ENABLE_DYNAMIC_EXTENSIONS OFF CACHE BOOL "Support loadable extensions" FORCE)
                 message(WARNING "Missing dlopen function, dynamic extensions disabled!")
             endif()
         endif()
@@ -228,7 +228,7 @@ else()
     add_definitions(-DSQLITE_OMIT_LOAD_EXTENSION=1)
 endif()
 
-if(ENABLE_MATH)
+if(SQLITE3_ENABLE_MATH)
     if(WIN32)
         add_definitions(-DSQLITE_ENABLE_MATH_FUNCTIONS=1)
     else()
@@ -240,7 +240,7 @@ if(ENABLE_MATH)
             add_definitions(-DSQLITE_ENABLE_MATH_FUNCTIONS=1)
             set(MATH_LIBRARIES m)
         else()
-            set(ENABLE_MATH OFF CACHE BOOL "SQL math functions" FORCE)
+            set(SQLITE3_ENABLE_MATH OFF CACHE BOOL "SQL math functions" FORCE)
             message(WARNING "Missing math function, SQL math functions disabled!")
         endif()
     endif()
@@ -260,7 +260,7 @@ if(HAVE_ZLIB_H)
 endif()
 
 # Check icu
-if(ENABLE_ICU)
+if(SQLITE3_ENABLE_ICU)
     find_package(ICU COMPONENTS uc i18n)
     if(ICU_FOUND)
         add_definitions(-DSQLITE_ENABLE_ICU=1)
@@ -268,7 +268,7 @@ if(ENABLE_ICU)
 endif()
 
 # Check editline or readline
-if(ENABLE_EDITLINE)
+if(SQLITE3_ENABLE_EDITLINE)
     check_include_file(editline/readline.h HAVE_EDITLINE_READLINE_H)
     if(HAVE_EDITLINE_READLINE_H)
         add_definitions(-DHAVE_EDITLINE_READLINE_H=1)
@@ -280,75 +280,75 @@ if(ENABLE_EDITLINE)
         if(HAVE_EDITLINE)
             add_definitions(-DHAVE_EDITLINE=1)
             set(READLINE_LIBRARIES edit)
-            set(ENABLE_READLINE OFF CACHE BOOL "Use GNU readline" FORCE)
+            set(SQLITE3_ENABLE_READLINE OFF CACHE BOOL "Use GNU readline" FORCE)
         else()
-            set(ENABLE_EDITLINE OFF CACHE BOOL "Use BSD libedit" FORCE)
+            set(SQLITE3_ENABLE_EDITLINE OFF CACHE BOOL "Use BSD libedit" FORCE)
         endif()
     else()
-        set(ENABLE_EDITLINE OFF CACHE BOOL "Use BSD libedit" FORCE)
+        set(SQLITE3_ENABLE_EDITLINE OFF CACHE BOOL "Use BSD libedit" FORCE)
     endif()
 endif()
 
-if(ENABLE_READLINE AND (NOT HAVE_EDITLINE))
+if(SQLITE3_ENABLE_READLINE AND (NOT HAVE_EDITLINE))
     check_include_file(readline/readline.h HAVE_READLINE_READLINE_H)
     if(HAVE_READLINE_READLINE_H)
         add_definitions(-DHAVE_READLINE_READLINE_H=1)
         add_definitions(-DHAVE_READLINE=1)
         set(READLINE_LIBRARIES readline)
     else()
-        set(ENABLE_READLINE OFF CACHE BOOL "Use GNU readline" FORCE)
+        set(SQLITE3_ENABLE_READLINE OFF CACHE BOOL "Use GNU readline" FORCE)
     endif()
 endif()
 
-if(ENABLE_FTS4)
+if(SQLITE3_ENABLE_FTS4)
     add_definitions(-DSQLITE_ENABLE_FTS4=1)
 endif()
 
-if(ENABLE_FTS3)
+if(SQLITE3_ENABLE_FTS3)
     add_definitions(-DSQLITE_ENABLE_FTS3=1)
 endif()
 
-if(ENABLE_FTS5)
+if(SQLITE3_ENABLE_FTS5)
     add_definitions(-DSQLITE_ENABLE_FTS5=1)
 endif()
 
-if(ENABLE_RTREE)
+if(SQLITE3_ENABLE_RTREE)
     add_definitions(-DSQLITE_ENABLE_RTREE=1 -DSQLITE_ENABLE_GEOPOLY=1)
 endif()
 
-if(ENABLE_SESSION)
+if(SQLITE3_ENABLE_SESSION)
     add_definitions(-DSQLITE_ENABLE_SESSION=1 -DSQLITE_ENABLE_PREUPDATE_HOOK=1)
 endif()
 
-if(ENABLE_COLUMN_METADATA)
+if(SQLITE3_ENABLE_COLUMN_METADATA)
     add_definitions(-DSQLITE_ENABLE_COLUMN_METADATA=1)
 endif()
 
-if(ENABLE_DBSTAT_VTAB)
-    add_definitions(-DSQLITE_ENABLE_DBSTAT_VTAB=1)
+if(SQLITE3_ENABLE_DBSTAT_VTAB)
+    add_definitions(-DSQLITE_NABLE_DBSTAT_VTAB=1)
 endif()
 
-if(ENABLE_RBU)
+if(SQLITE3_ENABLE_RBU)
     add_definitions(-DSQLITE_ENABLE_RBU=1)
 endif()
 
-if(ENABLE_STAT4)
+if(SQLITE3_ENABLE_STAT4)
     add_definitions(-DSQLITE_ENABLE_STAT4=1)
 endif()
 
-if(OMIT_DECLTYPE)
+if(SQLITE3_OMIT_DECLTYPE)
     add_definitions(-DSQLITE_OMIT_DECLTYPE=1)
 endif()
 
-if(OMIT_JSON)
+if(SQLITE3_OMIT_JSON)
     add_definitions(-DSQLITE_OMIT_JSON=1)
 endif()
 
-if(OMIT_AUTOINIT)
+if(SQLITE3_OMIT_AUTOINIT)
     add_definitions(-DSQLITE_OMIT_AUTOINIT=1)
 endif()
 
-if(USE_URI)
+if(SQLITE3_USE_URI)
     add_definitions(-DSQLITE_USE_URI=1)
 endif()
 
@@ -371,7 +371,7 @@ if(BUILD_WITH_XPSDK)
 endif()
 
 # https://www.sqlite.org/compile.html#recommended_compile_time_options
-if(RECOMMENDED_OPTIONS)
+if(SQLITE3_RECOMMENDED_OPTIONS)
     add_definitions(-DSQLITE_DEFAULT_WAL_SYNCHRONOUS=1
         -DSQLITE_DQS=0
         -DSQLITE_LIKE_DOESNT_MATCH_BLOBS
@@ -383,7 +383,7 @@ if(RECOMMENDED_OPTIONS)
     -DSQLITE_DEFAULT_MEMSTATUS=0)
 endif()
 
-if(ENABLE_DEBUG)
+if(SQLITE3_ENABLE_DEBUG)
     add_definitions(-DSQLITE_DEBUG=1
         -DSQLITE_ENABLE_SELECTTRACE=1
         -DSQLITE_ENABLE_WHERETRACE=1)
@@ -409,43 +409,43 @@ if(HAVE_SQLITE_CONFIG_H)
     add_definitions(-D_HAVE_SQLITE_CONFIG_H=1)
 endif()
 
-if(ENABLE_STATIC_SHELL)
-    if(NOT ENABLE_STATIC)
-        set(ENABLE_STATIC ON CACHE BOOL "Build static library" FORCE)
+if(SQLITE3_ENABLE_STATIC_SHELL)
+    if(NOT SQLITE3_ENABLE_STATIC)
+        set(SQLITE3_ENABLE_STATIC ON CACHE BOOL "Build static library" FORCE)
     endif()
 else()
-    if(NOT ENABLE_SHARED)
-        set(ENABLE_SHARED ON CACHE BOOL "Build shared library" FORCE)
+    if(NOT SQLITE3_ENABLE_SHARED)
+        set(SQLITE3_ENABLE_SHARED ON CACHE BOOL "Build shared library" FORCE)
     endif()
 endif()
 
-message(STATUS "Build shared library:                                 ${ENABLE_SHARED}")
+message(STATUS "Build shared library:                                 ${SQLITE3_ENABLE_SHARED}")
 message(STATUS "Shared library name:                                  ${CMAKE_SHARED_LIBRARY_PREFIX}${PROJECT_NAME}")
-message(STATUS "Build static library:                                 ${ENABLE_STATIC}")
-message(STATUS "Build shell tool:                                     ${BUILD_SHELL}")
-message(STATUS "Statically link shell tool:                           ${ENABLE_STATIC_SHELL}")
-message(STATUS "Build with debugging features enabled:                ${ENABLE_DEBUG}")
+message(STATUS "Build static library:                                 ${SQLITE3_ENABLE_STATIC}")
+message(STATUS "Build shell tool:                                     ${SQLITE3_BUILD_SHELL}")
+message(STATUS "Statically link shell tool:                           ${SQLITE3_ENABLE_STATIC_SHELL}")
+message(STATUS "Build with debugging features enabled:                ${SQLITE3_ENABLE_DEBUG}")
 message(STATUS "Have zlib:                                            ${ZLIB_FOUND}")
-message(STATUS "Use BSD libedit:                                      ${ENABLE_EDITLINE}")
-message(STATUS "Use GNU readline:                                     ${ENABLE_READLINE}")
-message(STATUS "Use international components for unicode:             ${ENABLE_ICU}")
-message(STATUS "Build a thread-safe library:                          ${ENABLE_THREADSAFE}")
-message(STATUS "Support loadable extensions:                          ${ENABLE_DYNAMIC_EXTENSIONS}")
-message(STATUS "SQL math functions:                                   ${ENABLE_MATH}")
-message(STATUS "Include fts4 support:                                 ${ENABLE_FTS4}")
-message(STATUS "Include fts3 support:                                 ${ENABLE_FTS3}")
-message(STATUS "Include fts5 support:                                 ${ENABLE_FTS5}")
-message(STATUS "Include rtree support:                                ${ENABLE_RTREE}")
-message(STATUS "Enable the session extension:                         ${ENABLE_SESSION}")
-message(STATUS "Enable column metadata:                               ${ENABLE_COLUMN_METADATA}")
-message(STATUS "Enable dbstat virtual table:                          ${ENABLE_DBSTAT_VTAB}")
-message(STATUS "Enable resumable bulk update extension:               ${ENABLE_RBU}")
-message(STATUS "Enhance query planner under certain situations:       ${ENABLE_STAT4}")
-message(STATUS "Omit declared type of columns:                        ${OMIT_DECLTYPE}")
-message(STATUS "Omit JSON SQL functions:                              ${OMIT_JSON}")
-message(STATUS "Omit automatic initialization:                        ${OMIT_AUTOINIT}")
-message(STATUS "Compile by SQLite3 recommended options:               ${RECOMMENDED_OPTIONS}")
-message(STATUS "Enable the default URI filename processing:           ${USE_URI}")
+message(STATUS "Use BSD libedit:                                      ${SQLITE3_ENABLE_EDITLINE}")
+message(STATUS "Use GNU readline:                                     ${SQLITE3_ENABLE_READLINE}")
+message(STATUS "Use international components for unicode:             ${SQLITE3_ENABLE_ICU}")
+message(STATUS "Build a thread-safe library:                          ${SQLITE3_ENABLE_THREADSAFE}")
+message(STATUS "Support loadable extensions:                          ${SQLITE3_ENABLE_DYNAMIC_EXTENSIONS}")
+message(STATUS "SQL math functions:                                   ${SQLITE3_ENABLE_MATH}")
+message(STATUS "Include fts4 support:                                 ${SQLITE3_ENABLE_FTS4}")
+message(STATUS "Include fts3 support:                                 ${SQLITE3_ENABLE_FTS3}")
+message(STATUS "Include fts5 support:                                 ${SQLITE3_ENABLE_FTS5}")
+message(STATUS "Include rtree support:                                ${SQLITE3_ENABLE_RTREE}")
+message(STATUS "Enable the session extension:                         ${SQLITE3_ENABLE_SESSION}")
+message(STATUS "Enable column metadata:                               ${SQLITE3_ENABLE_COLUMN_METADATA}")
+message(STATUS "Enable dbstat virtual table:                          ${SQLITE3_ENABLE_DBSTAT_VTAB}")
+message(STATUS "Enable resumable bulk update extension:               ${SQLITE3_ENABLE_RBU}")
+message(STATUS "Enhance query planner under certain situations:       ${SQLITE3_ENABLE_STAT4}")
+message(STATUS "Omit declared type of columns:                        ${SQLITE3_OMIT_DECLTYPE}")
+message(STATUS "Omit JSON SQL functions:                              ${SQLITE3_OMIT_JSON}")
+message(STATUS "Omit automatic initialization:                        ${SQLITE3_OMIT_AUTOINIT}")
+message(STATUS "Compile by SQLite3 recommended options:               ${SQLITE3_RECOMMENDED_OPTIONS}")
+message(STATUS "Enable the default URI filename processing:           ${SQLITE3_USE_URI}")
 message(STATUS "Use Windows Heap API functions for memory allocation: ${WIN32_MALLOC}")
 message(STATUS "Force the Win32 native memory allocator:              ${WIN32_HEAP_CREATE}")
 message(STATUS "Build for old 32bit (WinXP/2003) targets:             ${BUILD_WITH_XPSDK}")
@@ -474,7 +474,7 @@ if(NOT WIN32)
     configure_file(sqlite3.pc.in sqlite3.pc @ONLY)
 endif()
 
-if(ENABLE_SHARED)
+if(SQLITE3_ENABLE_SHARED)
     if(WIN32)
         set(SQLITE_API_DECL "SQLITE_API=__declspec(dllexport)")
     endif()
@@ -495,7 +495,7 @@ if(ENABLE_SHARED)
     install(FILES ${CMAKE_BINARY_DIR}/${SHAREDLIB_PREFIX}${PROJECT_NAME}.pdb DESTINATION ${CMAKE_INSTALL_BINDIR} OPTIONAL)
 endif()
 
-if(ENABLE_STATIC)
+if(SQLITE3_ENABLE_STATIC)
     if(WIN32)
         set(NAME_FIX_DECORATOR "_s")
     endif()
@@ -511,10 +511,10 @@ if(ENABLE_STATIC)
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 endif()
 
-if(BUILD_SHELL)
+if(SQLITE3_BUILD_SHELL)
     add_executable(sqlite3 ${SQLITE3_SHELL_SRC})
     target_compile_definitions(sqlite3 PRIVATE ${SQLITE3_SHELL_DEFS})
-    if(ENABLE_STATIC_SHELL)
+    if(SQLITE3_ENABLE_STATIC_SHELL)
         add_dependencies(sqlite3 sqlite3-static)
         target_link_libraries(sqlite3 sqlite3-static ${SQLITE3_DEP_LIBRARIES})
         target_include_directories(sqlite3 PUBLIC ${CMAKE_INSTALL_PREFIX}/include)
@@ -529,7 +529,7 @@ if(BUILD_SHELL)
         endif()
     elseif(MSVC)
         foreach(flag CMAKE_C_FLAGS_RELEASE CMAKE_C_FLAGS_MINSIZEREL CMAKE_C_FLAGS_DEBUG)
-            if(ENABLE_STATIC_SHELL)
+            if(SQLITE3_ENABLE_STATIC_SHELL)
                 string(REGEX REPLACE "/MD" "/MT" ${flag} "${${flag}}")
             else()
                 string(REGEX REPLACE "/MT" "/MD" ${flag} "${${flag}}")
